Clear styles, fix webpack chunk name

--- a/src/apps/utep_sdg_11_3_1/styles/index.scss
+++ b/src/apps/utep_sdg_11_3_1/styles/index.scss
@@ -35,155 +35,8 @@
 	flex-direction: column;
 }
 
-$headerHeight: m(2);
-
-.utep_sdg_11_3_1-header {
-	flex: 0 0 $headerHeight;
-	max-height: $headerHeight;
-	display: flex;
-	z-index: 20;
-}
-
 .utep_sdg_11_3_1-content {
 	flex: 1;
-	max-height: calc(100% - #{$headerHeight});
+	max-height: calc(100%);
 	position: relative;
-}
-
-
-
-.utep_sdg_11_3_1-header-home {
-	flex: 0 0 7rem;
-	background-color: #fff;
-	position: relative;
-}
-.utep_sdg_11_3_1-header-home > a {
-	display: block;
-	width: 6rem;
-	height: 2.125rem;
-	padding: 0 .5rem;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	cursor: pointer;
-}
-.utep_sdg_11_3_1-header-home::after {
-	content: " ";
-	position: absolute;
-	top: 50%;
-	right: 0;
-	height: 60%;
-	width: 1px;
-	transform: translateY(-50%);
-	background-color: var(--base20);
-}
-.utep_sdg_11_3_1-header-region-select {
-	flex: 0 0 16rem;
-	background-color: #fff;
-}
-.utep_sdg_11_3_1-header-indicator-select {
-	flex: 0 0 30rem;
-	max-width: 30rem;
-	background-color: var(--accent50);
-}
-.utep_sdg_11_3_1-header-toolbar {
-	flex: 1;
-	display: flex;
-	background-color: #3c5772;
-  align-items: center;
-
-}
-.utep_sdg_11_3_1-header-toolbar > div {
-	//padding: 0 .5rem 0 1.5rem;
-}
-.utep_sdg_11_3_1-header-toolbar > div:first-child {
-	flex: 1;
-}
-.utep_sdg_11_3_1-header-toolbar-right {
-	flex: 0 0 5rem;
-	padding: 0 .5rem;
-}
-.utep_sdg_11_3_1-header-toolbar,
-.utep_sdg_11_3_1-header-toolbar .ptr-button.invisible.inverted {
-	color: rgba(255,255,255,.75);
-}
-
-.utep_sdg_11_3_1-header-toolbar .ptr-menu {
-	z-index: 40;
-}
-
-.utep_sdg_11_3_1-header-toolbar .ptr-button.invisible.inverted:hover {
-  background-color: rgba(255,255,255,.15);
-}
-
-
-
-/* indicator select */
-.utep_sdg_11_3_1-indicator-select-current {
-	height: m(3);
-	background-color: var(--accent50);
-}
-.utep_sdg_11_3_1-indicator-select-current .ptr-panther-select-current-icon {
-	position: relative;
-	width: 2rem;
-	flex-basis: 2rem;
-	padding: 1.5rem .25rem;
-}
-.utep_sdg_11_3_1-indicator-select-current .ptr-panther-select-current-icon::after {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 1px;
-	content: '';
-	background-color: #fff3;
-}
-.utep_sdg_11_3_1-indicator-select-current .ptr-panther-select-current-icon svg {
-	width: 1.5rem;
-	height: 1.5rem;
-}
-.utep_sdg_11_3_1-indicator-select-current .ptr-panther-select-current-icon svg .line {
-	fill: #fffc;
-}
-
-.ptr-panther-select-list.utep_sdg_11_3_1-indicator-select-list {
-	padding-top: 3rem;
-	z-index: 15;
-}
-.utep_sdg_11_3_1-indicator-select-list.ptr-panther-select-list > div > div {
-	height: 100%;
-	transition: transform .5s ease-in-out;
-}
-.utep_sdg_11_3_1-indicator-select-content {
-	height: 100%;
-	background: linear-gradient(var(--accent50) 55%, var(--accent70) 100%);
-	background-size: auto 200%;
-	background-position: 0 0;
-	transition: background-position .5s ease-in-out;
-}
-.utep_sdg_11_3_1-indicator-select.open .utep_sdg_11_3_1-indicator-select-content {
-	//background: linear-gradient(var(--accent50) 10%, var(--accent100) 100%);
-	background-position: 0 100%;
-}
-
-/* map controls */
-.utep_sdg_11_3_1-app .map-controls {
-	bottom: m(5/3)
-}
-
-@media screen and (max-width: 75rem)  {
-	.utep_sdg_11_3_1-header-region-select {
-		flex: 0 0 12rem;
-	}
-	.utep_sdg_11_3_1-header-indicator-select {
-		flex: 0 0 20rem;
-		max-width: 20rem;
-	}
-}
-
-@media screen and (max-width: 55rem)  {
-	.utep_sdg_11_3_1-header-region-select {
-		display: none;
-	}
 }
