aster chart - fixed maximum

--- a/src/components/common/charts/AsterChart/style.scss
+++ b/src/components/common/charts/AsterChart/style.scss
@@ -23,11 +23,11 @@
 }
 
 .ptr-aster-chart-grid-text {
-	fill: var(--accent100);
+	fill: var(--base75);
 	font-size: $b1;
 }
 
 .ptr-aster-chart-grid-text-halo {
-	fill: var(--accent0);
+	fill: var(--base0);
 	font-size: $b1;
 }
