--- a/src/components/common/charts/AsterChart/style.scss
+++ b/src/components/common/charts/AsterChart/style.scss
@@ -10,6 +10,16 @@
 	stroke: var(--base0);
 }
 
+.ptr-aster-chart-segment-placeholder {
+	fill: var(--base20);
+	stroke: none;
+	opacity: 0;
+}
+
+.ptr-aster-chart-segment-placeholder.highlighted {
+	opacity: 1;
+}
+
 .ptr-aster-chart-grid-line {
 	fill: none;
 	stroke: var(--base40);
