--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -12,8 +12,24 @@
 
 .ptr-chart-container {
 	position: relative;
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	height: 100%;
+	align-items: center;
+	justify-content: center;
+}
+
+.ptr-chart-container.legend-top {
+	flex-direction: column-reverse;
+}
+
+.ptr-chart-container.legend-right {
+	flex-direction: row;
+}
+
+.ptr-chart-container.legend-left {
+	flex-direction: row-reverse;
 }
 
 .ptr-chart {
