--- a/src/components/common/maps/WorldWindMap/style.scss
+++ b/src/components/common/maps/WorldWindMap/style.scss
@@ -6,7 +6,16 @@
 	position: relative;
 	height: 100%;
 	width: 100%;
-	border: 1px solid #ccc;
+
+	$border: 1px solid #888;
+
+	:not(.row1) > & {
+		border-top: $border;
+	}
+
+	:not(.col1) > & {
+		border-left: $border;
+	}
 }
 
 .ptr-world-wind-map-canvas {
