--- a/src/apps/esponFuore/styles/index.scss
+++ b/src/apps/esponFuore/styles/index.scss
@@ -172,6 +172,14 @@ $headerHeight: m(2);
 	bottom: m(5/3)
 }
 
+.esponFuore-app .ptr-world-wind-map .map-label{
+	top: 2rem;
+	background-color: var(--base0);
+	color: var(--accent50);
+	box-shadow: 0 0 .3125rem 0 rgba(0,0,0,0.2);
+	border-right: .25rem solid var(--accent50);
+}
+
 @media screen and (max-width: 75rem)  {
 	.esponFuore-header-region-select {
 		flex: 0 0 12rem;
