Button: invisible primary styles

--- a/src/components/common/atoms/Button/style.scss
+++ b/src/components/common/atoms/Button/style.scss
@@ -192,6 +192,14 @@
   background: var(--base20);
 }
 
+.ptr-button.invisible.primary {
+  color: var(--accent60);
+}
+
+.ptr-button.invisible.primary:hover {
+  background: var(--accent20);
+}
+
 
 /* Circular */
 .ptr-button.circular {
