--- a/src/apps/tacrGeoinvaze/components/Header/components/CaseSelectContent/style.scss
+++ b/src/apps/tacrGeoinvaze/components/Header/components/CaseSelectContent/style.scss
@@ -24,3 +24,11 @@
   flex: 1;
   background-color: var(--accent30);
 }
+
+.tacrGeoinvaze-case-select-content-intro {
+  height: 0;
+  overflow: hidden;
+}
+.tacrGeoinvaze-case-select-content.showIntro .tacrGeoinvaze-case-select-content-intro {
+  height: 10rem;
+}
