--- a/src/apps/tacrGeoinvaze/styles/index.scss
+++ b/src/apps/tacrGeoinvaze/styles/index.scss
@@ -73,3 +73,11 @@
 .tacrGeoinvaze-case-select-content {
 	height: calc(100% - #{m(4)});
 }
+
+.tacrGeoinvaze-sidebar {
+	padding-top: m(4);
+	overflow: hidden;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
