--- a/src/apps/tacrGeoinvaze/components/CaseDetail/style.scss
+++ b/src/apps/tacrGeoinvaze/components/CaseDetail/style.scss
@@ -4,6 +4,7 @@
 .tacrGeoinvaze-case-detail {
 	overflow-y: auto;
 	padding: m(1);
+	white-space: pre-line;
 }
 
 .tacrGeoinvaze-case-detail > span:first-child {
