--- a/src/apps/tacrGeoinvaze/components/Header/components/CaseSelect/style.scss
+++ b/src/apps/tacrGeoinvaze/components/Header/components/CaseSelect/style.scss
@@ -1,3 +1,36 @@
 @import '../../../../../../styles/variables';
 @import '../../../../styles/variables';
 
+.tacrGeoinvaze-case-select-current > div:first-child {
+	position: relative;
+}
+.tacrGeoinvaze-case-value {
+	@include positionCenterVertical;
+	font-size: $a2;
+	//font-weight: bold;
+	left: 1rem;
+	color: var(--base0);
+	letter-spacing: .07rem;
+}
+
+.tacrGeoinvaze-case-select-current .ptr-panther-select-current-icon {
+	padding: .8rem .2rem;
+}
+
+.tacrGeoinvaze-case-select-current .ptr-panther-select-current-icon > svg {
+	width: 1.5rem;
+	height: 1.5rem;
+}
+.tacrGeoinvaze-case-select-current .ptr-panther-select-current-icon > svg .line {
+	fill: var(--base0);
+}
+
+.tacrGeoinvaze-case-select.currentDisabled .ptr-panther-select-current-icon {
+	display: none;
+}
+.tacrGeoinvaze-case-select:not(.currentDisabled) .tacrGeoinvaze-case-select-current {
+	transition: background-color .3s ease-in-out;
+}
+.tacrGeoinvaze-case-select:not(.currentDisabled) .tacrGeoinvaze-case-select-current:hover {
+	background-color: var(--accent45);
+}
