--- a/src/apps/tacrGeoinvaze/components/LayerControls/style.scss
+++ b/src/apps/tacrGeoinvaze/components/LayerControls/style.scss
@@ -4,7 +4,7 @@
 .tacrGeoinvaze-layer-controls > div {
   background: var(--accent15);
 	border-bottom: 1px solid var(--accent25);
-	padding: m(1/3);
+	padding: m(1/3) m(1);
 }
 
 .tacrGeoinvaze-layer-controls > div:hover {
