tacrGeoinvaze: styling - add (temp) images

--- a/src/apps/tacrGeoinvaze/components/Header/components/CaseSelectContent/style.scss
+++ b/src/apps/tacrGeoinvaze/components/Header/components/CaseSelectContent/style.scss
@@ -41,4 +41,31 @@
   height: m(5);
   padding: m(1);
   font-size: $b2;
+	color: #fff;
+}
+
+
+.tacrGeoinvaze-case-list .ptr-panther-select-item {
+	height: m(1+2/3);
+	padding: m(1/3);
+	border-bottom: 1px solid #fff4;
+	transition: background-color .3s ease-in-out;
+	cursor: pointer;
+	color: var(--accent90);
+}
+.tacrGeoinvaze-case-list .ptr-panther-select-item:hover {
+	background-color: #fff3;
+}
+
+.tacrGeoinvaze-case-select-terrestrialAnimals > div:first-child {
+	background: url("../../../../assets/temp_terrestrialAnimals.jpg") 50% 45%;
+}
+.tacrGeoinvaze-case-select-terrestrialPlants > div:first-child {
+	background: url("../../../../assets/temp_terrestrialPlants.jpg") 0 45%;
+}
+.tacrGeoinvaze-case-select-aquaticAnimals > div:first-child {
+	background: url("../../../../assets/temp_aquaticAnimals.jpg") 15% 55%;
+}
+.tacrGeoinvaze-case-select-aquaticPlants > div:first-child {
+	background: url("../../../../assets/temp_aquaticPlants.jpg") 40% 45%;
 }
