--- a/src/apps/tacrGeoinvaze/styles/index.scss
+++ b/src/apps/tacrGeoinvaze/styles/index.scss
@@ -84,3 +84,7 @@
 	display: flex;
 	flex-direction: column;
 }
+
+.tacrGeoinvaze-column-visualization > .ptr-adjustable-columns-content {
+	overflow: hidden;
+}
