tacrGeoinvaze: add iframe for crayfish only for actual expansion layer

--- a/src/apps/tacrGeoinvaze/components/LayerControls/style.scss
+++ b/src/apps/tacrGeoinvaze/components/LayerControls/style.scss
@@ -10,3 +10,11 @@
 .tacrGeoinvaze-layer-controls > div:hover {
 	background: var(--accent20);
 }
+
+.tacrGeoinvaze-layer-title {
+
+}
+.tacrGeoinvaze-layer-description {
+	font-size: $b1;
+	color: var(--base60);
+}
