--- a/src/apps/unSeea/components/pages/LandingPage/style.scss
+++ b/src/apps/unSeea/components/pages/LandingPage/style.scss
@@ -62,6 +62,24 @@
     height: 58px;
 }
 
+.unseea-subapp-list{
+	display: flex;
+	flex-flow: row;
+	justify-content: center;
+}
+
+.unseea-subapp-list	.unseea-subapp-item{
+	max-width: 30rem;
+    min-width: 15rem;
+    box-sizing: border-box;
+    height: 20rem;
+    margin: 2rem;
+	background: #b5b5b5;
+	border-radius: 0.6rem;
+	box-shadow: 0.6rem 0.6rem 0.3rem grey;
+}
+
+
 @media screen and (max-width: 60rem)  {
 	.unseea-landing-page-intro {
 		padding: m(1);
@@ -89,5 +107,89 @@
 	}
 	.unseea-landing-page-footer > a {
 		margin: m(1) 0;
+	}
+}
+
+
+
+.unseea-subapp-card {
+	margin: 2rem;
+	cursor: pointer;
+	height: m(10);
+	position: relative;
+	flex-basis: 25%;
+	min-width: 17rem;
+	max-width: 35rem;
+	background-size: cover;
+}
+
+.unseea-subapp-card.disabled {
+	pointer-events: none;
+}
+
+.unseea-subapp-card:before {
+	content: "";
+	background: linear-gradient(155deg, rgb(0,0,0), rgb(0,0,0) 55%, transparent);
+	opacity: .7;
+	transition: opacity .3s ease-in-out;
+	z-index: 0;
+	@include positionFill;
+}
+
+.unseea-subapp-card-name {
+	position: relative;
+	display: inline-block;
+	margin: m(1) 1rem m(2/3) 0;
+	padding: .5rem 1.5rem;
+	background: var(--accent50);
+	color: var(--base05);
+	font-size: $b2;
+	transition: background-color .3s ease-in-out, color .3s ease-in-out;
+	z-index: 1;
+}
+
+.unseea-subapp-card-description {
+	position: relative;
+	margin: 0 3.5rem 0 1.5rem;
+	color: var(--base10);
+	font-size: $b1;
+	line-height: 1.3;
+	max-width: 20rem;
+	transition: color .3s ease-in-out;
+	z-index: 1;
+}
+
+.unseea-subapp-card:hover:before,
+.unseea-subapp-card:focus:before {
+	background: linear-gradient(155deg, rgb(0,0,0), rgb(0,0,0) 55%, transparent);
+	opacity: .60;
+}
+
+.unseea-subapp-card:hover .unseea-subapp-card-name,
+.unseea-subapp-card:focus .unseea-subapp-card-name {
+	background: var(--accent45);
+	color: var(--base0);
+}
+
+.unseea-subapp-card:hover .unseea-subapp-card-description,
+.unseea-subapp-card:focus .unseea-subapp-card-description {
+	color: var(--base0);
+}
+
+@media screen and (max-width: 105rem)  {
+	.unseea-subapp-card {
+		flex-basis: calc(100%/3);
+	}
+}
+
+@media screen and (max-width: 60rem)  {
+	.unseea-subapp-card {
+		flex-basis: 50%;
+	}
+}
+
+@media screen and (max-width: 35rem)  {
+	.unseea-subapp-card {
+		flex-basis: 100%;
 	}
 }
