utep_sdg_11_3_1 - charts setup

--- a/src/apps/utep_sdg_11_3_1/styles/index.scss
+++ b/src/apps/utep_sdg_11_3_1/styles/index.scss
@@ -44,3 +44,9 @@
 .utep_sdg_11_3_1-app .map-tools {
 	bottom: 0;
 }
+
+.utep_sdg_11_3_1-right-panel {
+	background: var(--base15);
+	padding: m(1);
+	min-height: 100%;
+}
