--- a/src/components/common/charts/ChartLegend/style.scss
+++ b/src/components/common/charts/ChartLegend/style.scss
@@ -9,9 +9,13 @@
 .ptr-chart-legend-item {
 	display: flex;
 	align-items: center;
-	padding: .2rem .3rem;
+	padding: 0 .3rem;
 	margin-right: .3rem;
 	cursor: default;
+}
+
+.ptr-chart-legend-item.withNumbers {
+	padding: .2rem .3rem;
 }
 
 .ptr-chart-legend-item:hover {
@@ -19,12 +23,17 @@
 }
 
 .ptr-chart-legend-item-icon {
-	min-width: 1.25rem;
-	height: 1.25rem;
+	min-width: .7rem;
+	height: .7rem;
 	font-size: $b1;
 	line-height: 1.25rem;
 	text-align: center;
 	color: #000;
+}
+
+.ptr-chart-legend-item.withNumbers .ptr-chart-legend-item-icon {
+	min-width: 1.25rem;
+	height: 1.25rem;
 }
 
 .ptr-chart-legend-item-icon.dark {
