cartesian charts - axis labels

--- a/src/components/common/charts/ChartLegend/style.scss
+++ b/src/components/common/charts/ChartLegend/style.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/variables';
 
 .ptr-chart-legend {
-	margin: m(1/3) m(2/3) m(2/3);
+	margin: m(2/3) m(1/3) 0;
 	display: flex;
 	flex-wrap: wrap;
 }
