--- a/src/components/common/charts/ChartWrapper/style.scss
+++ b/src/components/common/charts/ChartWrapper/style.scss
@@ -108,7 +108,7 @@
 /* content */
 
 .ptr-chart-wrapper-content {
-	padding: 1rem 1.5rem .5rem .5rem;
+	padding: 1rem 1.5rem 1rem .5rem;
 }
 
 .ptr-chart-wrapper-content > div {
