docs: Add index + styling

--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -6,8 +6,8 @@
 }
 
 .ptr-docs-nav {
-	flex: 0 m(10);
-	background-color: var(--base30);
+	flex: 0 0 m(10);
+	background-color: var(--base20);
 }
 
 .ptr-docs-nav-directory,
