docs: styling (category colours)

--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -21,8 +21,7 @@
 .ptr-docs-nav-page > div {
 	margin-left: .5rem;
 }
-.ptr-docs-nav-directory:not(.level1),
-.ptr-docs-nav-page:not(.level1) {
+.ptr-docs-nav-directory > div {
 	border-left: 1px solid #b2b2b2;
 }
 
