utep_sdg_11_3_1 - dark mode

--- a/src/apps/utep_sdg_11_3_1/styles/_variables.scss
+++ b/src/apps/utep_sdg_11_3_1/styles/_variables.scss
@@ -19,3 +19,25 @@ $lightAccent85: hsl(31.55,56.17%,17.84%);
 $lightAccent90: hsl(31.39,52.85%,14.7%);
 $lightAccent95: hsl(32.6,50.71%,10.05%);
 $lightAccent100: hsl(43.72,96.17%,0.87%);
+
+$darkAccent0: hsl(45,100%,0.78%);
+$darkAccent5: hsl(33.02,51.12%,9.46%);
+$darkAccent10: hsl(31.52,51.35%,12.98%);
+$darkAccent15: hsl(31.39,53.32%,15.15%);
+$darkAccent20: hsl(31.51,55.57%,17.23%);
+$darkAccent25: hsl(31.68,58%,19.85%);
+$darkAccent30: hsl(31.89,60.63%,23.29%);
+$darkAccent35: hsl(32.13,63.29%,27.52%);
+$darkAccent40: hsl(32.38,65.82%,32.3%);
+$darkAccent45: hsl(32.63,68.09%,37.29%);
+$darkAccent50: hsl(32.85,70.04%,42.11%);
+$darkAccent55: hsl(33.04,71.63%,46.41%);
+$darkAccent60: hsl(33.18,72.87%,49.94%);
+$darkAccent65: hsl(33.29,81.89%,52.61%);
+$darkAccent70: hsl(33.37,89.09%,54.5%);
+$darkAccent75: hsl(33.43,94.81%,55.89%);
+$darkAccent80: hsl(33,98.99%,58.48%);
+$darkAccent85: hsl(32.19,100%,63.7%);
+$darkAccent90: hsl(31.83,100%,71.07%);
+$darkAccent95: hsl(31.83,100%,81.87%);
+$darkAccent100: hsl(33.62,100%,97.47%);
