utep_sdg_11_3_1 - GoToPlace usage

--- a/src/apps/utep_sdg_11_3_1/styles/_variables.scss
+++ b/src/apps/utep_sdg_11_3_1/styles/_variables.scss
@@ -1,39 +1,48 @@
 $lightAccent0: hsl(40,100%,99.41%);
-$lightAccent5: hsl(32.93,100%,96.12%);
-$lightAccent10: hsl(32.4,100%,93.49%);
-$lightAccent15: hsl(32.13,100%,90.48%);
-$lightAccent20: hsl(31.94,100%,86.39%);
-$lightAccent25: hsl(31.81,100%,80.77%);
-$lightAccent30: hsl(31.79,100%,73.35%);
-$lightAccent35: hsl(32.22,100%,63.44%);
-$lightAccent40: hsl(33.35,87.1%,53.99%);
-$lightAccent45: hsl(33.13,72.41%,48.61%);
-$lightAccent50: hsl(32.9,70.46%,43.22%);
-$lightAccent55: hsl(32.66,68.41%,38.07%);
-$lightAccent60: hsl(32.44,66.33%,33.37%);
-$lightAccent65: hsl(32.22,64.27%,29.27%);
-$lightAccent70: hsl(32.03,62.28%,25.82%);
-$lightAccent75: hsl(31.86,60.37%,22.93%);
-$lightAccent80: hsl(31.71,58.45%,20.39%);
-$lightAccent85: hsl(31.55,56.17%,17.84%);
-$lightAccent90: hsl(31.39,52.85%,14.7%);
-$lightAccent95: hsl(32.6,50.71%,10.05%);
-$lightAccent100: hsl(43.72,96.17%,0.87%);
+$lightAccent5: hsl(33.59,100%,97.44%);
+$lightAccent10: hsl(32.86,100%,95.87%);
+$lightAccent15: hsl(32.48,100%,94.1%);
+$lightAccent20: hsl(32.22,100%,91.74%);
+$lightAccent25: hsl(32.03,100%,88.59%);
+$lightAccent30: hsl(31.89,100%,84.64%);
+$lightAccent35: hsl(31.8,100%,79.95%);
+$lightAccent40: hsl(31.78,100%,74.7%);
+$lightAccent45: hsl(31.89,100%,69.03%);
+$lightAccent50: hsl(32.26,100%,62.92%);
+$lightAccent50rgb: 255,168,66;
+$lightAccent55: hsl(33.4,92.25%,55.28%);
+$lightAccent60: hsl(33.11,72.26%,48.19%);
+$lightAccent65: hsl(32.84,69.99%,42%);
+$lightAccent70: hsl(32.6,67.86%,36.77%);
+$lightAccent75: hsl(32.39,65.86%,32.4%);
+$lightAccent80: hsl(32.19,63.88%,28.56%);
+$lightAccent85: hsl(31.97,61.57%,24.7%);
+$lightAccent90: hsl(31.68,58.13%,20%);
+$lightAccent95: hsl(31.46,51.64%,13.37%);
+$lightAccent100: hsl(43.33,95.07%,0.91%);
 
 $darkAccent0: hsl(45,100%,0.78%);
-$darkAccent5: hsl(33.02,51.12%,9.46%);
-$darkAccent10: hsl(31.52,51.35%,12.98%);
-$darkAccent15: hsl(31.39,53.32%,15.15%);
-$darkAccent20: hsl(31.51,55.57%,17.23%);
-$darkAccent25: hsl(31.68,58%,19.85%);
-$darkAccent30: hsl(31.89,60.63%,23.29%);
-$darkAccent35: hsl(32.13,63.29%,27.52%);
-$darkAccent40: hsl(32.38,65.82%,32.3%);
-$darkAccent45: hsl(32.63,68.09%,37.29%);
-$darkAccent50: hsl(32.85,70.04%,42.11%);
-$darkAccent55: hsl(33.04,71.63%,46.41%);
-$darkAccent60: hsl(33.18,72.87%,49.94%);
-$darkAccent65: hsl(33.29,81.89%,52.61%);
+$darkAccent5: hsl(31.59,51.07%,12.55%);
+$darkAccent10: hsl(31.53,55.85%,17.51%);
+$darkAccent15: hsl(31.73,58.68%,20.68%);
+$darkAccent20: hsl(31.92,60.97%,23.78%);
+$darkAccent25: hsl(32.14,63.42%,27.75%);
+$darkAccent30: hsl(32.41,66.13%,32.95%);
+$darkAccent35: hsl(32.72,68.94%,39.34%);
+$darkAccent40: hsl(33.04,71.69%,46.58%);
+$darkAccent45: hsl(33.35,87.58%,54.11%);
+$darkAccent50: hsl(32.41,100%,61.54%);
+$darkAccent50rgb: 255,165,59;
+$darkAccent55: hsl(31.99,100%,66.62%);
+$darkAccent60: hsl(31.85,100%,70.45%);
+$darkAccent65: hsl(31.8,100%,73.26%);
+$darkAccent70: hsl(31.78,100%,75.23%);
+$darkAccent75: hsl(31.78,100%,76.67%);
+$darkAccent80: hsl(31.79,100%,78.06%);
+$darkAccent85: hsl(31.8,100%,80.07%);
+$darkAccent90: hsl(31.86,100%,83.48%);
+$darkAccent95: hsl(32.06,100%,89.2%);
+$darkAccent100: hsl(34.47,100%,98.24%);
 $darkAccent70: hsl(33.37,89.09%,54.5%);
 $darkAccent75: hsl(33.43,94.81%,55.89%);
 $darkAccent80: hsl(33,98.99%,58.48%);
