--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -51,3 +51,57 @@
 .ptr-docs-page {
 	padding: m(1);
 }
+
+/* Component props table */
+.ptr-docs-props-table {
+	display: flex;
+	flex-wrap: wrap;
+	background: var(--base10);
+	padding: .35rem;
+	margin: m(1/3) 0;
+	max-width: 80rem;
+}
+
+.ptr-docs-props-table-empty-row {
+	height: m(1);
+}
+
+.ptr-docs-props-table tr th {
+	font-weight: bold;
+	text-align: left;
+}
+
+.ptr-docs-props-table tr th,
+.ptr-docs-props-table tr td {
+	padding: .35rem 1rem .35rem .25rem;
+	color: var(--base80);
+}
+
+.ptr-docs-props-table-name,
+.ptr-docs-props-table-type,
+.ptr-docs-props-table-default {
+	font-family: monospace;
+	font-size: 1.15rem;
+}
+
+.ptr-docs-props-table tr td.ptr-docs-props-table-name {
+	color: #6f3bc7;
+	font-weight: bold;
+}
+
+.ptr-docs-props-table tr td.ptr-docs-props-table-type {
+	color: #00b402;
+}
+
+.ptr-docs-props-table .ptr-docs-props-table-required {
+	text-align: center;
+}
+
+.ptr-docs-props-table-description {
+	width: 99%;
+}
+
+.ptr-docs-props-table-description-object > div > span {
+	font-family: monospace;
+	font-size: 1.15rem;
+}
