--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -3,8 +3,14 @@
 .ptr-docs {
 	display: flex;
 	min-height: 100%;
+	background: var(--base0);
 }
 
+.ptr-docs-basic-list {
+	margin-left: 2rem;
+}
+
+/* Navigation */
 .ptr-docs-nav {
 	flex: 0 0 m(10);
 	background-color: var(--base20);
@@ -47,7 +53,7 @@
 	font-style: italic;
 }
 
-
+/* Page */
 .ptr-docs-page {
 	padding: m(1);
 }
