Docs - Component props table - circle icon instead of unicode symbol

--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -134,6 +134,13 @@
 	text-align: center;
 }
 
+.ptr-docs-props-table .ptr-docs-props-table-required .ptr-icon {
+	width: 1rem;
+	height: 1rem;
+	position: relative;
+	top: .15rem;
+}
+
 .ptr-docs-props-table-description {
 	width: 99%;
 }
