Docs - line chart - typical example

--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -154,3 +154,8 @@
 .ptr-docs-syntax-highlighter {
 	background: var(--base85);
 }
+
+/* Visualizations */
+.ptr-docs-visualizations-intro-example {
+	margin-bottom: m(1);
+}
