Cartesian charts - default size is 100 % of the container

--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -5,6 +5,10 @@
 	min-height: 100%;
 	background: var(--base0);
 }
+.ptr-docs-content {
+	flex-grow: 1;
+}
+
 
 .ptr-docs-basic-list {
 	margin-left: 2rem;
