--- a/src/components/common/charts/style.scss
+++ b/src/components/common/charts/style.scss
@@ -36,6 +36,10 @@
 	box-sizing: content-box;
 }
 
+.ptr-cartesian-chart {
+	width: 100%;
+}
+
 /* Axis */
 .ptr-axis-baseline {
 	stroke-width: 2px;
