Docs - fix resizable container max width

--- a/src/apps/docs/components/ResizableContainer/style.scss
+++ b/src/apps/docs/components/ResizableContainer/style.scss
@@ -3,6 +3,7 @@
 .ptr-resizable-container {
 	position: relative;
 	min-height: m(10);
+	width: 100%;
 }
 
 .ptr-resizable-container .react-draggable {
