--- a/src/apps/docs/styles/index.scss
+++ b/src/apps/docs/styles/index.scss
@@ -63,6 +63,14 @@
 	padding: .25rem 0;
 	padding-left: .75rem;
 }
+.ptr-docs-nav-directory.active > .ptr-docs-nav-link > a,
+.ptr-docs-nav-page.active > .ptr-docs-nav-link > a {
+	border-left: 2px solid #b2b2b2;
+	background-color: rgba(255,255,255,.5);
+}
+.ptr-docs-nav-directory.active.level1 > .ptr-docs-nav-link > a {
+	border-left: 0;
+}
 .ptr-docs-nav-link > a:hover {
 	background-color: rgba(255,255,255,.2);
 }
@@ -74,6 +82,105 @@
 .ptr-docs-nav-anchor > .ptr-docs-nav-link > a {
 	font-style: italic;
 }
+
+.ptr-docs-nav-directory.level1,
+.ptr-docs-nav-page.level1 {
+	border-top: 1px solid #ccc;
+}
+
+.ptr-docs-nav-directory.level1 > .ptr-docs-nav-link,
+.ptr-docs-nav-page.level1 > .ptr-docs-nav-link {
+	background-color: var(--base25);
+}
+
+.ptr-docs-nav-directory.level1 > div,
+.ptr-docs-nav-page.level1 > div {
+	margin-top: m(1/3);
+	margin-bottom: m(1/3);
+}
+
+
+/* specific colours */
+
+.ptr-docs-node-architecture.ptr-docs-nav-directory.level1 {
+	border-color: rgba(133,157,228,.7);
+}
+.ptr-docs-node-architecture.ptr-docs-nav-directory.level1 > .ptr-docs-nav-link {
+	background-color: rgba(133,157,228,.2);
+}
+.ptr-docs-node-architecture > div,
+.ptr-docs-node-architecture .ptr-docs-nav-directory > div,
+.ptr-docs-node-architecture .ptr-docs-nav-directory.active > .ptr-docs-nav-link > a,
+.ptr-docs-node-architecture .ptr-docs-nav-page.active > .ptr-docs-nav-link > a {
+	border-color: #859de4;
+}
+.ptr-docs-node-architecture.ptr-docs-nav-directory.active > .ptr-docs-nav-link > a {
+	color: #5f73e3;
+}
+.ptr-docs-node-architecture a:hover {
+	color: #5f73e3;
+}
+
+.ptr-docs-node-design.ptr-docs-nav-directory.level1 {
+	border-color: rgba(60, 199, 67, 0.7);
+}
+.ptr-docs-node-design.ptr-docs-nav-directory.level1 > .ptr-docs-nav-link {
+	background-color: rgba(60,199,67,.2);
+}
+.ptr-docs-node-design > div,
+.ptr-docs-node-design .ptr-docs-nav-directory > div,
+.ptr-docs-node-design .ptr-docs-nav-directory.active > .ptr-docs-nav-link > a,
+.ptr-docs-node-design .ptr-docs-nav-page.active > .ptr-docs-nav-link > a {
+	border-color: #29c933;
+}
+.ptr-docs-node-design.ptr-docs-nav-directory.active > .ptr-docs-nav-link > a {
+	color: #289e2a;
+}
+.ptr-docs-node-design a:hover {
+	color: #289e2a;
+}
+
+.ptr-docs-node-components.ptr-docs-nav-directory.level1 {
+	border-color: rgba(228,145,145,.7);
+}
+.ptr-docs-node-components.ptr-docs-nav-directory.level1 > .ptr-docs-nav-link {
+	background-color: rgba(228,145,145,.2);
+}
+.ptr-docs-node-components > div,
+.ptr-docs-node-components .ptr-docs-nav-directory > div,
+.ptr-docs-node-components .ptr-docs-nav-directory.active > .ptr-docs-nav-link > a,
+.ptr-docs-node-components .ptr-docs-nav-page.active > .ptr-docs-nav-link > a {
+	border-color: #e49191;
+}
+.ptr-docs-node-components.ptr-docs-nav-directory.active > .ptr-docs-nav-link > a {
+	color: #e46f73;
+}
+.ptr-docs-node-components a:hover {
+	color: #e46f73;
+}
+
+.ptr-docs-node-code.ptr-docs-nav-directory.level1 {
+	border-color: rgba(206,155,231,.7);
+}
+.ptr-docs-node-code.ptr-docs-nav-directory.level1 > .ptr-docs-nav-link {
+	background-color: rgba(206,155,231,.2);
+}
+.ptr-docs-node-code > div,
+.ptr-docs-node-code .ptr-docs-nav-directory > div,
+.ptr-docs-node-code .ptr-docs-nav-directory.active > .ptr-docs-nav-link > a,
+.ptr-docs-node-code .ptr-docs-nav-page.active > .ptr-docs-nav-link > a {
+	border-color: #ce9be7;
+}
+.ptr-docs-node-code.ptr-docs-nav-directory.active > .ptr-docs-nav-link > a {
+	color: #aa67cd;
+}
+.ptr-docs-node-code a:hover {
+	color: #aa67cd;
+}
+
+
+
+
 
 /* Page */
 .ptr-docs-page {
